hphp/hack/test/typecheck/reactive/rx_if_implements1.php.exp
File "rx_if_implements1.php", line 6, characters 1-35:
__OnlyRxIfImpl annotations are only valid on class methods. (Parsing[1002])
